@@ -2141,3 +2141,8 @@ Start... early ages
   CPU on the make command line. For example, use "make CPUFLAGS=-m68020-60 512"
   to build an EmuTOS version optimized for 68020 CPUs and higher.
   (patch by Vincent Riviere)
+
+2010-01-01
+- vdi/vdi_mouse.c: Fixed completely wrong Initmous() parameter that was
+  causing an interrupt storm on real IKBD hardware.
+  (patch by Vincent Riviere)
